<resources>
  <string name="app_name">Pokédex</string>
  <string name="pokemon_image">Pokemon Image</string>
  <string name="search">Search</string>

  // Detail View
  <string name="pokemon_description">Pokemon Description:</string>
  <string name="height">Height:</string>
  <string name="weight">Weight:</string>
  <string name="category">Category:</string>
  <string name="abilities">Abilities:</string>
  <string name="type">Type:</string>
  <string name="stats">Stats:</string>
  <string name="speed">Speed</string>
  <string name="special_defense">Special Defense</string>
  <string name="special_attach">Special Attach</string>
  <string name="defense">Defense</string>
  <string name="attach">Attach</string>
  <string name="hp">HP</string>
  <string name="unit_kg">%1$s kg</string>
  <string name="unit_m">%1$s m</string>
  <string name="front_default">Front Default</string>
  <string name="back_default">Back Default</string>
  <string name="front_shiny">Front Shiny</string>
  <string name="back_shiny">Back Shiny</string>
  <string name="front_female">Front Female</string>
  <string name="back_female">Back Female</string>
  <string name="front_shiny_female">Front Shiny Female</string>
  <string name="back_shiny_female">Back Shiny Female</string>

  // Error Message
  <string name="error_message">Error %1$s</string>

  // Others
  <string name="details_fragment_tag">DetailsFragment</string>
  <string name="id_bun">ID</string>
  <string name="ok_btn">OK</string>

</resources>
