<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="50dp">

    <TextView
        android:id="@+id/pokemon_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/pokemon_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/pokemon_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:padding="20dp"
        android:fontFamily="@font/aclonica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_description"/>


    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/height"
        android:textStyle="bold"
        android:visibility="visible"
        android:padding="5dp"
        android:layout_marginStart="16dp"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_description_input"
        app:layout_constraintEnd_toStartOf="@id/height_input"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/height_input"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:minWidth="100dp"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/pokemon_description_input"
        app:layout_constraintStart_toEndOf="@id/height"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/weight"
        android:textStyle="bold"
        android:visibility="visible"
        android:padding="5dp"
        android:layout_marginStart="16dp"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@id/height_input"
        app:layout_constraintTop_toBottomOf="@id/pokemon_description_input"
        app:layout_constraintEnd_toStartOf="@id/weight_input"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/weight_input"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:minWidth="100dp"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/pokemon_description_input"
        app:layout_constraintStart_toEndOf="@id/weight"
        android:fontFamily="@font/aclonica"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokemon_photo_list"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pokemon_category"
        app:layout_constraintTop_toBottomOf="@id/weight"/>

    <TextView
        android:id="@+id/pokemon_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:padding="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_photo_list"/>

    <TextView
        android:id="@+id/category1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:background="@drawable/rounded_corners"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:backgroundTint="@color/colorPrimary"
        android:padding="5dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_category"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/pokemon_abilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:padding="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/abilities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category1"/>

    <TextView
        android:id="@+id/ability_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:drawableEnd="@drawable/ic_info"
        android:padding="5dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_abilities"
        app:layout_constraintEnd_toStartOf="@id/ability_2"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/ability_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="5dp"
        android:drawableEnd="@drawable/ic_info"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/pokemon_abilities"
        app:layout_constraintStart_toEndOf="@id/ability_1"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/pokemon_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:padding="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ability_1"/>


    <TextView
        android:id="@+id/type_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:background="@drawable/rounded_corners"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:padding="5dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_type"
        app:layout_constraintEnd_toStartOf="@id/type_2"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:id="@+id/type_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:background="@drawable/rounded_corners"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/pokemon_type"
        app:layout_constraintStart_toEndOf="@id/type_1"
        android:fontFamily="@font/aclonica"/>


    <TextView
        android:id="@+id/pokemon_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:padding="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_1"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/tools"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_stats"
        app:layout_constraintEnd_toEndOf="parent" >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hp"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:text="@string/hp"
            android:textStyle="bold"
            android:visibility="visible"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/hp_input"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/hp_input"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/hp"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/attach"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:text="@string/attach"
            android:textStyle="bold"
            android:visibility="visible"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp"
            app:layout_constraintEnd_toStartOf="@id/attach_input"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/attach_input"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/hp"
            app:layout_constraintStart_toEndOf="@id/attach"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/defense"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:text="@string/defense"
            android:textStyle="bold"
            android:visibility="visible"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attach"
            app:layout_constraintEnd_toStartOf="@id/defense_input"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/defense_input"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/attach"
            app:layout_constraintStart_toEndOf="@id/defense"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/special_attach"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:text="@string/special_attach"
            android:textStyle="bold"
            android:visibility="visible"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/defense"
            app:layout_constraintEnd_toStartOf="@id/special_attach_input"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/special_attach_input"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/defense"
            app:layout_constraintStart_toEndOf="@id/special_attach"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/special_defense"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:text="@string/special_defense"
            android:textStyle="bold"
            android:visibility="visible"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/special_attach"
            app:layout_constraintEnd_toStartOf="@id/special_defense_input"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/special_defense_input"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/special_attach"
            app:layout_constraintStart_toEndOf="@id/special_defense"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/speed"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:text="@string/speed"
            android:textStyle="bold"
            android:visibility="visible"
            android:padding="5dp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/special_defense"
            app:layout_constraintEnd_toStartOf="@id/speed_input"
            android:fontFamily="@font/aclonica"/>

        <TextView
            android:id="@+id/speed_input"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_stroke"
            android:padding="5dp"
            android:textAlignment="viewStart"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/special_defense"
            app:layout_constraintStart_toEndOf="@id/speed"
            android:fontFamily="@font/aclonica"/>


      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>